# speak

./: README.md  pyproject.toml  requirements.txt  speak.py
